tests/unit/default/syntax-error/161-alter-table-dot-name-to.e.t
---- IN ----
*%table.name=>
---- OUT ----
---- ERR ----
syntax: expected <name> after `*%table.name=>` instead of EOL at position 14 - at line 1
---- EXIT ----
1
